--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script defer src="./js/task-3.js"></script>
   </head>
   <body>
-    <h1>Three functions</h1>
-    <h2>working with arrays</h2>
+    <h1>JS Homework-4</h1>
+    <h2>Three tasks</h2>
   </body>
 </html>
