--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <script defer src="./js/task-3.js"></script>
   </head>
   <body>
-    <h1>JS Homework-4</h1>
-    <h2>Three tasks</h2>
+    <h1>JS Homework-5</h1>
+    <h2>Other-tasks</h2>
+    <!-- <script src="./js/other-tasks.js"></script>
+    <script src="js/filter-find.js"></script>
+    <script src="./js/every-some-reduce.js"></script>
+    <script src="./js/to-sorted.js"></script> -->
   </body>
 </html>
