--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <script defer src="./js/task-1.js"></script>
     <script defer src="./js/task-2.js"></script>
     <script defer src="./js/task-3.js"></script>
+    <script defer src="./js/task-4.js"></script>
   </head>
   <body>
     <h1>JS Homework-5</h1>
-    <h2>Other-tasks</h2>
+    <h2>Map&flatMap, filter&find, every, some, reduce methods</h2>
     <!-- <script src="./js/other-tasks.js"></script>
     <script src="js/filter-find.js"></script>
     <script src="./js/every-some-reduce.js"></script>
