--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <script defer src="./js/task-1.js"></script>
     <script defer src="./js/task-2.js"></script>
     <script defer src="./js/task-3.js"></script>
-    <script defer src="./js/task-4.js"></script>
   </head>
   <body>
-    <h1>JS Homework-5</h1>
-    <h2>Map&flatMap, filter&find, every, some, reduce methods</h2>
+    <h1>JS Homework-6</h1>
+    <h2>
+      OOP， classes， instances，getters, setters, this keyword for context
+      execution
+    </h2>
     <!-- <script src="./js/other-tasks.js"></script>
     <script src="js/filter-find.js"></script>
     <script src="./js/every-some-reduce.js"></script>
